--- a/unit_8/package.json
+++ b/unit_8/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node_lite_shop",
+  "name": "node_shop",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
-    "mysql": "^2.17.0",
-    "pug": "^2.0.3"
+    "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.4.0",
+    "pug": "^3.0.2"
   }
 }
