--- a/unit_8/package.json
+++ b/unit_8/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.4.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sweetalert2": "^11.7.12"
   }
 }
