--- a/unit_8/package.json
+++ b/unit_8/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie": "^0.5.0",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.4.0",
