--- a/unit_8/package.json
+++ b/unit_8/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.4.0",
